# FutureDash

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  main.cpp
.github/workflows/: cmake.yml
libraries/: README.txt
libraries/gd.h/manager_nodes/: GameManager.h
libraries/minhook/: build.bat
src/: AbbreviatedLabels.hpp  AlertLayerDelegate.hpp  BrownAlertLayer.hpp  Callbacks.cpp  Callbacks.hpp  CreditsLayer.cpp  CreditsLayer.hpp  EditorPauseLayerHook.cpp  EditorPauseLayerHook.h  InfoLayer.cpp  InfoLayer.hpp  LevelCellHook.cpp  LevelCellHook.hpp  LevelInfoLayerHook.cpp  LevelInfoLayerHook.hpp  MenuLayerHook.cpp  MenuLayerHook.hpp  ModToolbox.cpp  ModToolbox.hpp  MoreOptionsLayerHook.cpp  MoreOptionsLayerHook.hpp  OptionsLayerHook.cpp  OptionsLayerHook.hpp  PauseLayerHook.cpp  PauseLayerHook.hpp  PlayerInfoLayer.cpp  PlayerInfoLayer.hpp  ProfilePageHook.cpp  ProfilePageHook.hpp  SelectMoreOptionsLayer.cpp  SelectMoreOptionsLayer.h  dllmain.cpp  includes.h  main.cpp  utils.hpp
